@@ -1,7 +1,8 @@
 package freshlyground.compiler.backend;
 
-import freshlyground.compiler.backend.Generator;
+import freshlyground.compiler.frontend.Analyzer;
 import freshlyground.compiler.frontend.Ast;
+import freshlyground.compiler.semantic.Bindings;
 import freshlyground.compiler.semantic.Environment;
 import freshlyground.compiler.semantic.Scope;
 import org.junit.jupiter.api.Assertions;
@@ -9,36 +10,33 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.io.PrintWriter;
-import java.io.StringWriter;
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
-import java.util.function.Consumer;
 import java.util.stream.Stream;
 
 public class GeneratorTests {
 
-    private static final Environment.Type OBJECT_TYPE = new Environment.Type("ObjectType", "ObjectType", init(new Scope(null), scope -> {
-        scope.defineVariable("field", "field", Environment.Type.INTEGER, false);
-        scope.defineFunction("method", "method", Arrays.asList(Environment.Type.ANY), Environment.Type.INTEGER);
-    }));
+    private static final Environment.Type OBJECT_TYPE;
+    static {
+        Scope objectScope = new Scope(Environment.Type.ANY.getScope());
+        objectScope.defineVariable("field", "fld", Environment.Type.INTEGER, false);
+        // as this is a nested function that Type.ANY is added to allow for the invoking object to be passed as a param
+        objectScope.defineFunction("method", "method", List.of(Environment.Type.ANY), Environment.Type.INTEGER);
+        OBJECT_TYPE = new Environment.Type("object", "obj", objectScope);
+    }
 
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testSource(String test, Ast.Source ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testSource() {
-        Environment.Function _print = new Environment.Function("print", "System.out.println", Arrays.asList(Environment.Type.ANY), Environment.Type.NIL);
-        Environment.Function _main = new Environment.Function("main", "main", Arrays.asList(), Environment.Type.INTEGER);
-        Environment.Variable _x = new Environment.Variable("x", "x", Environment.Type.INTEGER, false);
-        Environment.Variable _y = new Environment.Variable("y", "y", Environment.Type.INTEGER, false);
-        Environment.Variable _num = new Environment.Variable("num", "num", Environment.Type.INTEGER, false);
-        Environment.Variable _sum = new Environment.Variable("sum", "sum", Environment.Type.INTEGER, false);
-
         return Stream.of(
 
             // DEF main(): Integer DO
@@ -46,60 +44,13 @@ public class GeneratorTests {
             // END
             Arguments.of("Single Method",
                 new Ast.Source(
-                    Arrays.asList(),
-                    Arrays.asList(
-                        init(new Ast.Method(
-                            "main",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Integer"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Literal(BigInteger.valueOf(-1)), ast -> ast.setType(Environment.Type.INTEGER))
-                                )
-                            )
-                        ), ast -> ast.setFunction(_main))
-                    )
+                    List.of(),
+                    List.of(
+                        new Ast.Method("main", List.of(), List.of(), Optional.of("Integer"), List.of(
+                                new Ast.Statement.Return(new Ast.Expression.Literal(BigInteger.valueOf(-1))))))
                 ),
                 String.join(System.lineSeparator(),
                     "public class Main {",
-                    "",
-                    "    public static void main(String[] args) {",
-                    "        System.exit(new Main().main());",
-                    "    }",
-                    "",
-                    "    int main() {",
-                    "        return -1;",
-                    "    }",
-                    "",
-                    "}"
-                )
-            ),
-
-            // LET x: Integer;
-            Arguments.of("Single Field",
-                new Ast.Source(
-                    Arrays.asList(
-                        init(new Ast.Field("x", "Integer", false, Optional.empty()), ast -> ast.setVariable(_x))
-                    ),
-                    Arrays.asList(
-                        init(new Ast.Method(
-                            "main",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Integer"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Literal(BigInteger.valueOf(-1)), ast -> ast.setType(Environment.Type.INTEGER))
-                                )
-                            )
-                        ), ast -> ast.setFunction(_main))
-                    )
-                ),
-                String.join(System.lineSeparator(),
-                    "public class Main {",
-                    "",
-                    "    int x;",
                     "",
                     "    public static void main(String[] args) {",
                     "        System.exit(new Main().main());",
@@ -115,24 +66,12 @@ public class GeneratorTests {
 
             // LET x: Integer;
             // DEF main(): Integer DO RETURN -1; END
-            Arguments.of("Single Field and Method",
+            Arguments.of("Single Field",
                 new Ast.Source(
-                    Arrays.asList(
-                        init(new Ast.Field("x", "Integer", false, Optional.empty()), ast -> ast.setVariable(_x))
-                    ),
-                    Arrays.asList(
-                        init(new Ast.Method(
-                            "main",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Integer"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Literal(BigInteger.valueOf(-1)), ast -> ast.setType(Environment.Type.INTEGER))
-                                )
-                            )
-                        ), ast -> ast.setFunction(_main))
-                    )
+                    List.of(new Ast.Field("x", "Integer", false, Optional.empty())),
+                    List.of(
+                        new Ast.Method("main", List.of(), List.of(), Optional.of("Integer"), List.of(
+                            new Ast.Statement.Return(new Ast.Expression.Literal(BigInteger.valueOf(-1))))))
                 ),
                 String.join(System.lineSeparator(),
                     "public class Main {",
@@ -151,36 +90,19 @@ public class GeneratorTests {
                 )
             ),
 
-
             // DEF main(): Integer DO
             //     print("Hello, World!");
             //     RETURN 0;
             // END
             Arguments.of("Hello, World!",
                 new Ast.Source(
-                    Arrays.asList(),
-
-                    Arrays.asList(
-                        init(new Ast.Method(
-                            "main",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Integer"),
-                            Arrays.asList(
-                                new Ast.Statement.Expression(
-                                    init(new Ast.Expression.Function(
-                                        Optional.empty(),
-                                        "print",
-                                        Arrays.asList(init(new Ast.Expression.Literal("Hello, World!"), ast -> ast.setType(Environment.Type.STRING)))),
-                                        ast -> ast.setFunction(_print)
-                                    )
-                                ),
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Literal(BigInteger.ZERO), ast -> ast.setType(Environment.Type.INTEGER))
-                                )
-                            )
-                        ), ast -> ast.setFunction(_main))
-                    )
+                    List.of(),
+                    List.of(
+                        new Ast.Method("main", List.of(), List.of(), Optional.of("Integer"), List.of(
+                            new Ast.Statement.Expression(
+                                new Ast.Expression.Function(Optional.empty(), "print",
+                                    List.of(new Ast.Expression.Literal("Hello, World!")))),
+                            new Ast.Statement.Return(new Ast.Expression.Literal(BigInteger.ZERO)))))
                 ),
                 String.join(System.lineSeparator(),
                     "public class Main {",
@@ -205,32 +127,21 @@ public class GeneratorTests {
             // END
             Arguments.of("Multiple Fields and One Method",
                 new Ast.Source(
-                    Arrays.asList(
-                        init(new Ast.Field("x", "Integer", false, Optional.empty()), ast -> ast.setVariable(_x)),
-                        init(new Ast.Field("y", "Integer", false, Optional.of(
-                                init(new Ast.Expression.Literal(BigInteger.TEN),ast -> ast.setType(Environment.Type.INTEGER)))
-                            ),
-                            ast -> ast.setVariable(_y)
-                        )
-                    ),
-
-                    Arrays.asList(
-                        init(new Ast.Method(
+                    List.of(
+                        new Ast.Field("x", "Integer", false, Optional.empty()),
+                        new Ast.Field("y", "Integer", false, Optional.of(
+                            new Ast.Expression.Literal(BigInteger.TEN)))),
+                    List.of(
+                        new Ast.Method(
                             "main",
-                            Arrays.asList(),
-                            Arrays.asList(),
+                            List.of(),
+                            List.of(),
                             Optional.of("Integer"),
-                            Arrays.asList(
+                            List.of(
                                 new Ast.Statement.Return(
-                                    init(new Ast.Expression.Binary("+",
-                                        init(new Ast.Expression.Access(Optional.empty(), "x"), ast -> ast.setVariable(_x)),
-                                        init(new Ast.Expression.Access(Optional.empty(),"y"), ast -> ast.setVariable(_y))),
-                                        ast -> ast.setType(Environment.Type.INTEGER)
-                                    )
-                                )
-                            )
-                        ), ast -> ast.setFunction(_main))
-                    )
+                                    new Ast.Expression.Binary("+",
+                                        new Ast.Expression.Access(Optional.empty(), "x"),
+                                        new Ast.Expression.Access(Optional.empty(),"y"))))))
                 ),
                 String.join(System.lineSeparator(),
                     "public class Main {",
@@ -265,59 +176,16 @@ public class GeneratorTests {
             // END
             Arguments.of("Multiple Methods One Field",
                 new Ast.Source(
-                    Arrays.asList(
-                        init(new Ast.Field("x", "Integer", false, Optional.empty()), ast -> ast.setVariable(_x))
-                    ),
-
-                    Arrays.asList(
-                        init(new Ast.Method(
-                            "f",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Integer"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Literal(BigInteger.ONE),ast -> ast.setType(Environment.Type.INTEGER))
-                                )
-                            )
-                        ), ast -> ast.setFunction(new Environment.Function("f", "f", Arrays.asList(), Environment.Type.INTEGER))),
-
-                        init(new Ast.Method(
-                            "g",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Decimal"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Literal(BigDecimal.ONE),ast -> ast.setType(Environment.Type.DECIMAL))
-                                )
-                            )
-                        ), ast -> ast.setFunction(new Environment.Function("g", "g", Arrays.asList(), Environment.Type.DECIMAL))),
-
-                        init(new Ast.Method(
-                            "h",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("String"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Literal("str"),ast -> ast.setType(Environment.Type.STRING))
-                                )
-                            )
-                        ), ast -> ast.setFunction(new Environment.Function("h", "h", Arrays.asList(), Environment.Type.STRING))),
-
-                        init(new Ast.Method(
-                            "main",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Integer"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Literal(BigInteger.valueOf(-1)),ast -> ast.setType(Environment.Type.INTEGER))
-                                )
-                            )
-                        ), ast -> ast.setFunction(_main))
-                    )
+                    List.of(new Ast.Field("x", "Integer", false, Optional.empty())),
+                    List.of(
+                        new Ast.Method("f", List.of(), List.of(), Optional.of("Integer"), List.of(
+                            new Ast.Statement.Return(new Ast.Expression.Literal(BigInteger.ONE)))),
+                        new Ast.Method("g", List.of(), List.of(), Optional.of("Decimal"), List.of(
+                            new Ast.Statement.Return(new Ast.Expression.Literal(BigDecimal.ONE)))),
+                        new Ast.Method("h", List.of(), List.of(), Optional.of("String"), List.of(
+                            new Ast.Statement.Return(new Ast.Expression.Literal("str")))),
+                        new Ast.Method("main", List.of(), List.of(), Optional.of("Integer"), List.of(
+                            new Ast.Statement.Return(new Ast.Expression.Literal(BigInteger.valueOf(-1))))))
                 ),
                 String.join(System.lineSeparator(),
                     "public class Main {",
@@ -364,67 +232,18 @@ public class GeneratorTests {
             // END
             Arguments.of("Multiple Fields and Methods",
                 new Ast.Source(
-                    Arrays.asList(
-                        init(new Ast.Field("x", "Integer", false, Optional.empty()), ast -> ast.setVariable(_x)),
-                        init(new Ast.Field("y", "Decimal", false, Optional.empty()), ast -> ast.setVariable(
-                                new Environment.Variable("y", "y", Environment.Type.DECIMAL, false)
-                            )),
-                        init(new Ast.Field("z", "String", false, Optional.empty()), ast -> ast.setVariable(
-                                new Environment.Variable("z", "z", Environment.Type.STRING, false)
-                            ))
-                    ),
-
-                    Arrays.asList(
-                        init(new Ast.Method(
-                            "f",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Integer"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Access(Optional.empty(),"x"), ast -> ast.setVariable(
-                                        new Environment.Variable("x", "x", Environment.Type.INTEGER, false)
-                                    ))
-                                )
-                            )
-                        ), ast -> ast.setFunction(new Environment.Function("f", "f", Arrays.asList(), Environment.Type.INTEGER))),
-
-                        init(new Ast.Method(
-                            "g",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Decimal"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Access(Optional.empty(),"y"), ast -> ast.setVariable(
-                                        new Environment.Variable("y", "y", Environment.Type.DECIMAL, false)
-                                    ))
-                                )
-                            )
-                        ), ast -> ast.setFunction(new Environment.Function("g", "g", Arrays.asList(), Environment.Type.DECIMAL))),
-
-                        init(new Ast.Method(
-                            "h",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("String"),
-                            Arrays.asList(
-                                new Ast.Statement.Return(
-                                    init(new Ast.Expression.Access(Optional.empty(),"z"), ast -> ast.setVariable(
-                                        new Environment.Variable("z", "z", Environment.Type.STRING, false)
-                                    ))
-                                )
-                            )
-                        ), ast -> ast.setFunction(new Environment.Function("h", "h", Arrays.asList(), Environment.Type.STRING))),
-
-                        init(new Ast.Method(
-                            "main",
-                            Arrays.asList(),
-                            Arrays.asList(),
-                            Optional.of("Integer"),
-                            Arrays.asList()
-                        ), ast -> ast.setFunction(_main))
-                    )
+                    List.of(
+                        new Ast.Field("x", "Integer", false, Optional.empty()),
+                        new Ast.Field("y", "Decimal", false, Optional.empty()),
+                        new Ast.Field("z", "String", false, Optional.empty())),
+                    List.of(
+                        new Ast.Method("f", List.of(), List.of(), Optional.of("Integer"), List.of(
+                            new Ast.Statement.Return(new Ast.Expression.Access(Optional.empty(),"x")))),
+                        new Ast.Method("g", List.of(), List.of(), Optional.of("Decimal"), List.of(
+                            new Ast.Statement.Return(new Ast.Expression.Access(Optional.empty(),"y")))),
+                        new Ast.Method("h", List.of(), List.of(), Optional.of("String"), List.of(
+                            new Ast.Statement.Return(new Ast.Expression.Access(Optional.empty(),"z")))),
+                        new Ast.Method("main", List.of(), List.of(), Optional.of("Integer"), List.of()))
                 ),
                 String.join(System.lineSeparator(),
                     "public class Main {",
@@ -460,56 +279,44 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testFieldExpression(String test, Ast.Field ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testFieldExpression() {
-        Environment.Variable _x = new Environment.Variable("x", "x", Environment.Type.STRING, false);
-        Environment.Variable _y = new Environment.Variable("y", "y", Environment.Type.BOOLEAN, false);
-        Environment.Variable _name = new Environment.Variable("name", "name", Environment.Type.INTEGER, false);
-        Environment.Variable _dub = new Environment.Variable("dub", "dub", Environment.Type.DECIMAL, false);
-
         return Stream.of(
             // LET x: String;
             Arguments.of("Declaration 1",
-                init(new Ast.Field("x", "String", false, Optional.empty()),
-                    ast -> ast.setVariable(_x)
-                ),
+                new Ast.Field("x", "String", false, Optional.empty()),
                 "String x;"
             ),
             // LET name: Integer;
             Arguments.of("Declaration 2",
-                init(new Ast.Field("name", "Integer", false, Optional.empty()),
-                    ast -> ast.setVariable(_name)
-                ),
+                new Ast.Field("name", "Integer", false, Optional.empty()),
                 "int name;"
             ),
             // LET dub: Decimal = 1.0;
             Arguments.of("Initialization",
-                init(new Ast.Field("dub", "Decimal", false, Optional.of(
-                        init(new Ast.Expression.Literal(BigDecimal.valueOf(1.1)), ast -> ast.setType(Environment.Type.DECIMAL))
-                    )),
-                    ast -> ast.setVariable(_dub)
+                new Ast.Field("dub", "Decimal", false, Optional.of(
+                        new Ast.Expression.Literal(BigDecimal.valueOf(1.1)))
                 ),
                 "double dub = 1.1;"
             ),
             // LET CONST y: Boolean = TRUE AND FALSE;
             Arguments.of("Initialization CONST",
-                init(new Ast.Field("y", "Boolean", true, Optional.of(
-                    init(new Ast.Expression.Binary("AND",
-                        init(new Ast.Expression.Literal(true), ast -> ast.setType(Environment.Type.BOOLEAN)),
-                        init(new Ast.Expression.Literal(false), ast -> ast.setType(Environment.Type.BOOLEAN))),
-                        ast -> ast.setType(Environment.Type.BOOLEAN)
-                    ))
-                ),ast -> ast.setVariable(_y)),
+                new Ast.Field("y", "Boolean", true, Optional.of(
+                    new Ast.Expression.Binary("AND",
+                        new Ast.Expression.Literal(true),
+                        new Ast.Expression.Literal(false)))
+                ),
                 "final boolean y = true && false;"
             ),
             // LET str: Comparable = string;
             Arguments.of("Supertype Supertype",
-                init(new Ast.Field("str", "Comparable", false, Optional.of(
-                        init(new Ast.Expression.Literal("string"), ast -> ast.setType(Environment.Type.STRING))
-                    )),
-                    ast -> ast.setVariable(_dub)
+                new Ast.Field("str", "Comparable", false, Optional.of(
+                    new Ast.Expression.Literal("string"))
                 ),
                 "Comparable str = \"string\";"
             )
@@ -519,32 +326,23 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testMethodExpression(String test, Ast.Method ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+        analyzer.getScope().defineFunction("function", "function", List.of(Environment.Type.INTEGER), Environment.Type.INTEGER);
+        analyzer.getScope().defineVariable("radius", "radius", Environment.Type.DECIMAL, false);
+        analyzer.getScope().defineVariable("x", "x", Environment.Type.INTEGER, false);
+        analyzer.getScope().defineVariable("y", "y", Environment.Type.DECIMAL, false);
+        analyzer.getScope().defineVariable("z", "z", Environment.Type.STRING, false);
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testMethodExpression() {
-        Environment.Function _area = new Environment.Function("area", "area", Arrays.asList(Environment.Type.DECIMAL), Environment.Type.DECIMAL);
-        Environment.Function _func = new Environment.Function("func", "func", Arrays.asList(Environment.Type.INTEGER, Environment.Type.DECIMAL, Environment.Type.STRING), Environment.Type.DECIMAL);
-        Environment.Function _print = new Environment.Function("print", "System.out.println", Arrays.asList(Environment.Type.ANY), Environment.Type.NIL);
-        Environment.Function _function = new Environment.Function("function", "function", Arrays.asList(Environment.Type.INTEGER), Environment.Type.INTEGER);
-        Environment.Function _empty = new Environment.Function("func", "func", Arrays.asList(), Environment.Type.STRING);
-
-        Environment.Variable _radius = new Environment.Variable("radius", "radius", Environment.Type.DECIMAL, false);
-        Environment.Variable _x = new Environment.Variable("x", "x", Environment.Type.INTEGER, false);
-        Environment.Variable _y = new Environment.Variable("y", "y", Environment.Type.DECIMAL, false);
-        Environment.Variable _z = new Environment.Variable("z", "z", Environment.Type.STRING, false);
-
         return Stream.of(
             // DEF func(): String DO
             // END
             Arguments.of("No Statements",
-                init(new Ast.Method(
-                    "func",
-                    Arrays.asList(),
-                    Arrays.asList(),
-                    Optional.of("String"),
-                    Arrays.asList()), ast -> ast.setFunction(_empty)
-                ),
+                new Ast.Method("func", List.of(), List.of(), Optional.of("String"), List.of()),
                 String.join(System.lineSeparator(),
                     "String func() {}"
                 )
@@ -554,20 +352,9 @@ public class GeneratorTests {
             //   function(1);
             // END
             Arguments.of("One Statement",
-                init(new Ast.Method(
-                    "func",
-                    Arrays.asList(),
-                    Arrays.asList(),
-                    Optional.of("String"),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_function)))
-                    )), ast -> ast.setFunction(_empty)
+                new Ast.Method("func", List.of(), List.of(), Optional.of("String"), List.of(
+                    new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(),"function", List.of(
+                        new Ast.Expression.Literal(BigInteger.ONE)))))
                 ),
                 String.join(System.lineSeparator(),
                     "String func() {",
@@ -580,23 +367,13 @@ public class GeneratorTests {
             //   RETURN 3.14 * radius * radius
             // END
             Arguments.of("Method",
-                init(new Ast.Method(
-                    "area",
-                    Arrays.asList("radius"),
-                    Arrays.asList("Decimal"),
-                    Optional.of("Decimal"),
-                    Arrays.asList(
-                        new Ast.Statement.Return(
-                            init(new Ast.Expression.Binary("*",
-                                init(new Ast.Expression.Binary("*",
-                                    init(new Ast.Expression.Literal(BigDecimal.valueOf(3.14)), ast -> ast.setType(Environment.Type.DECIMAL)),
-                                    init(new Ast.Expression.Access(Optional.empty(), "radius"), ast -> ast.setVariable(_radius))
-                                ), ast -> ast.setType(Environment.Type.DECIMAL)),
-
-                                init(new Ast.Expression.Access(Optional.empty(), "radius"), ast -> ast.setVariable(_radius))
-                            ), ast -> ast.setType(Environment.Type.DECIMAL))
-                        )
-                    )), ast -> ast.setFunction(_area)
+                new Ast.Method("area", List.of("radius"), List.of("Decimal"), Optional.of("Decimal"), List.of(
+                    new Ast.Statement.Return(
+                        new Ast.Expression.Binary("*",
+                            new Ast.Expression.Binary("*",
+                                new Ast.Expression.Literal(BigDecimal.valueOf(3.14)),
+                                new Ast.Expression.Access(Optional.empty(), "radius")),
+                            new Ast.Expression.Access(Optional.empty(), "radius"))))
                 ),
                 String.join(System.lineSeparator(),
                     "double area(double radius) {",
@@ -611,34 +388,19 @@ public class GeneratorTests {
             //   function(3);
             // END
             Arguments.of("Multiple Statement",
-                init(new Ast.Method(
-                    "func",
-                    Arrays.asList(),
-                    Arrays.asList(),
-                    Optional.of("String"),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_function))),
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.valueOf(2)), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_function))),
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.valueOf(3)), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_function)))
-                    )), ast -> ast.setFunction(_empty)
+                new Ast.Method("func", List.of(), List.of(), Optional.of("String"), List.of(
+                    new Ast.Statement.Expression(new Ast.Expression.Function(
+                        Optional.empty(),
+                        "function",
+                        List.of(new Ast.Expression.Literal(BigInteger.ONE)))),
+                    new Ast.Statement.Expression(new Ast.Expression.Function(
+                        Optional.empty(),
+                        "function",
+                        List.of(new Ast.Expression.Literal(BigInteger.valueOf(2))))),
+                    new Ast.Statement.Expression(new Ast.Expression.Function(
+                        Optional.empty(),
+                        "function",
+                        List.of(new Ast.Expression.Literal(BigInteger.valueOf(3))))))
                 ),
                 String.join(System.lineSeparator(),
                     "String func() {",
@@ -653,20 +415,11 @@ public class GeneratorTests {
             // function(1);
             //END
             Arguments.of("One Parameter",
-                init(new Ast.Method(
-                    "func",
-                    Arrays.asList("x"),
-                    Arrays.asList("String"),
-                    Optional.of("String"),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_function)))
-                    )), ast -> ast.setFunction(_empty)
+                new Ast.Method("func", List.of("x"), List.of("String"), Optional.of("String"), List.of(
+                    new Ast.Statement.Expression(new Ast.Expression.Function(
+                        Optional.empty(),
+                        "function",
+                        List.of(new Ast.Expression.Literal(BigInteger.ONE)))))
                 ),
                 String.join(System.lineSeparator(),
                     "String func(String x) {",
@@ -679,25 +432,11 @@ public class GeneratorTests {
             //   function(1);
             // END
             Arguments.of("Multiple Parameters",
-                init(new Ast.Method(
-                    "func",
-                    Arrays.asList("x", "y", "z"),
-                    Arrays.asList("String", "String", "String"),
-                    Optional.empty(),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_function)))
-                    )), ast -> ast.setFunction(
-                        new Environment.Function("func",
-                            "func",
-                            Arrays.asList(Environment.Type.STRING, Environment.Type.STRING, Environment.Type.STRING),
-                            Environment.Type.NIL)
-                    )
+                new Ast.Method("func", List.of("x", "y", "z"), List.of("String", "String", "String"), Optional.empty(), List.of(
+                    new Ast.Statement.Expression(new Ast.Expression.Function(
+                        Optional.empty(),
+                        "function",
+                        List.of(new Ast.Expression.Literal(BigInteger.ONE)))))
                 ),
                 String.join(System.lineSeparator(),
                     "Void func(String x, String y, String z) {",
@@ -706,39 +445,30 @@ public class GeneratorTests {
                 )
             ),
 
-
             // DEF func(x: Integer, y: Decimal, z: String) DO
             //    print(x);
             //    print(y);
             //    print(z);
             // END
             Arguments.of("Multiple Statements and Parameters",
-                init(new Ast.Method(
+                new Ast.Method(
                     "func",
-                    Arrays.asList("x", "y", "z"),
-                    Arrays.asList("Integer", "Decimal", "String"),
+                    List.of("x", "y", "z"),
+                    List.of("Integer", "Decimal", "String"),
                     Optional.empty(),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
+                    List.of(
+                        new Ast.Statement.Expression(new Ast.Expression.Function(
                             Optional.empty(),
-                            "x",
-                            Arrays.asList(init(new Ast.Expression.Access(Optional.empty(), "x"), ast -> ast.setVariable(_x)))
-                        ), ast -> ast.setFunction(_print))),
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
+                            "print",
+                            List.of(new Ast.Expression.Access(Optional.empty(), "x")))),
+                        new Ast.Statement.Expression(new Ast.Expression.Function(
                             Optional.empty(),
-                            "y",
-                            Arrays.asList(init(new Ast.Expression.Access(Optional.empty(), "y"), ast -> ast.setVariable(_y)))
-                        ), ast -> ast.setFunction(_print))),
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
+                            "print",
+                            List.of(new Ast.Expression.Access(Optional.empty(), "y")))),
+                        new Ast.Statement.Expression(new Ast.Expression.Function(
                             Optional.empty(),
-                            "z",
-                            Arrays.asList(init(new Ast.Expression.Access(Optional.empty(), "z"), ast -> ast.setVariable(_z)))
-                        ), ast -> ast.setFunction(_print)))
-                    )), ast -> ast.setFunction(
-                        new Environment.Function("func",
-                            "func",
-                            Arrays.asList(),
-                            Environment.Type.NIL))
+                            "print",
+                            List.of(new Ast.Expression.Access(Optional.empty(), "z")))))
                 ),
                 String.join(System.lineSeparator(),
                     "Void func(int x, double y, String z) {",
@@ -749,27 +479,15 @@ public class GeneratorTests {
                 )
             ),
 
-            // TODO fix
             // DEF func() DO
             //   function(1);
             // END
             Arguments.of("Empty Return Type",
-                init(new Ast.Method(
-                    "func",
-                    Arrays.asList(),
-                    Arrays.asList(),
-                    Optional.empty(),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
+                new Ast.Method("func", List.of(), List.of(), Optional.empty(), List.of(
+                        new Ast.Statement.Expression(new Ast.Expression.Function(
                             Optional.empty(),
                             "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_function)))
-                    )), ast -> ast.setFunction(
-                    new Environment.Function("func", "func", Arrays.asList(), Environment.Type.NIL)
-                    )
+                            List.of(new Ast.Expression.Literal(BigInteger.ONE)))))
                 ),
                 String.join(System.lineSeparator(),
                     "Void func() {",
@@ -782,21 +500,8 @@ public class GeneratorTests {
             //   RETURN "xyz";
             // END
             Arguments.of("Return Statement",
-                init(new Ast.Method(
-                    "func",
-                    Arrays.asList(),
-                    Arrays.asList(),
-                    Optional.of("String"),
-                    Arrays.asList(
-                        new Ast.Statement.Return(
-                            init(new Ast.Expression.Literal("xyz"), ast -> ast.setType(Environment.Type.STRING))
-                        )
-                    )), ast -> ast.setFunction(
-                    new Environment.Function("func",
-                        "func",
-                        Arrays.asList(),
-                        Environment.Type.STRING)
-                    )
+                new Ast.Method("func", List.of(), List.of(), Optional.of("String"), List.of(
+                    new Ast.Statement.Return(new Ast.Expression.Literal("xyz")))
                 ),
                 String.join(System.lineSeparator(),
                     "String func() {",
@@ -810,28 +515,12 @@ public class GeneratorTests {
             //    RETURN 0;
             //END
             Arguments.of("Hello World",
-                init(new Ast.Method(
-                    "main",
-                    Arrays.asList(),
-                    Arrays.asList(),
-                    Optional.of("Integer"),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "print",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal("Hello World"), ast -> ast.setType(Environment.Type.STRING))
-                            )), ast -> ast.setFunction(_print))
-                        ),
-                        new Ast.Statement.Return(
-                            init(new Ast.Expression.Literal(BigInteger.ZERO), ast -> ast.setType(Environment.Type.INTEGER))
-                        )
-                    )), ast -> ast.setFunction(
-                    new Environment.Function("main",
-                        "main",
-                        Arrays.asList(),
-                        Environment.Type.INTEGER)
-                    )
+                new Ast.Method("main", List.of(), List.of(), Optional.of("Integer"), List.of(
+                    new Ast.Statement.Expression(new Ast.Expression.Function(
+                        Optional.empty(),
+                        "print",
+                        List.of(new Ast.Expression.Literal("Hello World")))),
+                    new Ast.Statement.Return(new Ast.Expression.Literal(BigInteger.ZERO)))
                 ),
                 String.join(System.lineSeparator(),
                     "int main() {",
@@ -846,70 +535,65 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testExpressionStatement(String test, Ast.Statement.Expression ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+        analyzer.getScope().defineFunction("log", "log", List.of(Environment.Type.STRING), Environment.Type.NIL);
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testExpressionStatement() {
-        Environment.Function _log = new Environment.Function("log", "log", Arrays.asList(Environment.Type.STRING), Environment.Type.NIL);
-
         return Stream.of(
             //Function (2): function();
 
             // log("Hello World");
             Arguments.of("Expression",
                 new Ast.Statement.Expression(
-                    init(new Ast.Expression.Function(Optional.empty(),"log", Arrays.asList(
-                        init(new Ast.Expression.Literal("Hello World"), ast -> ast.setType(Environment.Type.STRING))
-                    )), ast -> ast.setFunction(_log))
+                    new Ast.Expression.Function(Optional.empty(),"log", List.of(
+                        new Ast.Expression.Literal("Hello World")))
                 ),
                 "log(\"Hello World\");"
-            ),
-            // 1;
-            Arguments.of("Initialization",
-                new Ast.Statement.Expression(init(new Ast.Expression.Literal(new BigDecimal("1")),ast -> ast.setType(Environment.Type.INTEGER))),
-                "1;"
             )
+            // 1; (MOVE TO SAD PATH)
+//            Arguments.of("Initialization",
+//                new Ast.Statement.Expression(init(new Ast.Expression.Literal(new BigDecimal("1")),ast -> ast.setType(Environment.Type.INTEGER))),
+//                "1;"
+//            )
         );
     }
 
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testDeclarationStatement(String test, Ast.Statement.Declaration ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testDeclarationStatement() {
-        Environment.Variable _name = new Environment.Variable("name", "name", Environment.Type.INTEGER, true);
-        Environment.Variable _name2 = new Environment.Variable("name", "name", Environment.Type.DECIMAL, true);
-
         return Stream.of(
             // LET name: Integer;
             Arguments.of("Declaration",
-                init(new Ast.Statement.Declaration("name", Optional.of("Integer"), Optional.empty()
-                ), ast -> ast.setVariable(_name)),
+                new Ast.Statement.Declaration("name", Optional.of("Integer"), Optional.empty()),
                 "int name;"
             ),
             // LET name = 1.0;
             Arguments.of("Initialization",
-                init(new Ast.Statement.Declaration("name", Optional.empty(), Optional.of(
-                    init(new Ast.Expression.Literal(new BigDecimal("1.0")),ast -> ast.setType(Environment.Type.DECIMAL))
-                )), ast -> ast.setVariable(_name2)),
+                new Ast.Statement.Declaration("name", Optional.empty(), Optional.of(
+                    new Ast.Expression.Literal(new BigDecimal("1.0")))),
                 "double name = 1.0;"
             ),
-            // LET str: String = string;
+            // LET str: String = "string";
             Arguments.of("Typed Initialization",
-                init(new Ast.Statement.Declaration("str", Optional.of("String"), Optional.of(
-                    init(new Ast.Expression.Literal("string"),ast -> ast.setType(Environment.Type.STRING))
-                )), ast -> ast.setVariable(
-                    new Environment.Variable("str", "str", Environment.Type.STRING, true))),
+                new Ast.Statement.Declaration("str", Optional.of("String"), Optional.of(
+                    new Ast.Expression.Literal("string"))),
                 "String str = \"string\";"
             ),
-            // LET str: Comparable = string;
+            // LET str: Comparable = string; (maybe redo this in assignment)
             Arguments.of("Supertype",
-                init(new Ast.Statement.Declaration("str", Optional.of("Comparable"), Optional.of(
-                    init(new Ast.Expression.Literal("string"),ast -> ast.setType(Environment.Type.STRING))
-                )), ast -> ast.setVariable(
-                    new Environment.Variable("str", "str", Environment.Type.COMPARABLE, true))),
+                new Ast.Statement.Declaration("str", Optional.of("Comparable"), Optional.of(
+                    new Ast.Expression.Literal("string"))),
                 "Comparable str = \"string\";"
             )
         );
@@ -918,253 +602,206 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testAssignmentStatement(String test, Ast.Statement.Assignment ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+        analyzer.getScope().defineVariable("variableStr", "var", Environment.Type.STRING, false);
+        analyzer.getScope().defineVariable("variableFunc", "var", Environment.Type.CHARACTER, false);
+        analyzer.getScope().defineVariable("object", "obj", OBJECT_TYPE, false);
+        analyzer.getScope().defineVariable("field", "fld", Environment.Type.INTEGER, false);
+        analyzer.getScope().defineFunction("funcOne", "funcONE", List.of(), Environment.Type.CHARACTER);
+        analyzer.getScope().defineVariable("variableOne", "varONE", Environment.Type.CHARACTER, false);
+        analyzer.getScope().defineVariable("variableTwo", "varTWO", Environment.Type.CHARACTER, false);
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testAssignmentStatement() {
-        Environment.Variable _variable = new Environment.Variable("variable", "variable", Environment.Type.STRING, false);
-        Environment.Variable _object = new Environment.Variable("object", "object", OBJECT_TYPE, false);
-        Environment.Variable _field = new Environment.Variable("field", "field", Environment.Type.INTEGER, false);
-
-
         return Stream.of(
             // variable = "Hello World";
-            Arguments.of("Variable",
+            Arguments.of("Variable String",
                 new Ast.Statement.Assignment(
-                    init(new Ast.Expression.Access(Optional.empty(), "variable"),ast -> ast.setVariable(_variable)),
-                    init(new Ast.Expression.Literal("Hello World"), ast -> ast.setType(Environment.Type.STRING))
+                    new Ast.Expression.Access(Optional.empty(), "variableStr"),
+                    new Ast.Expression.Literal("Hello World")
                 ),
-                "variable = \"Hello World\";"
+                "var = \"Hello World\";"
             ),
             // field = 1;
-            Arguments.of("Variable JVM field",
+            Arguments.of("Variable Int",
                 new Ast.Statement.Assignment(
-                    init(new Ast.Expression.Access(Optional.empty(), "field"),ast -> ast.setVariable(_field)),
-                    init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
+                    new Ast.Expression.Access(Optional.empty(), "field"),
+                    new Ast.Expression.Literal(BigInteger.ONE)
                 ),
-                "field = 1;"
+                "fld = 1;"
             ),
             // object.field = 1;
-            Arguments.of("Field JVM field",
+            Arguments.of("Receiver",
                 new Ast.Statement.Assignment(
-                    init(
-                        new Ast.Expression.Access(Optional.of(
-                            init(new Ast.Expression.Access(Optional.empty(), "object"), ast -> ast.setVariable(_object))
-                            ), "field"), ast -> ast.setVariable(_field)
-                    ),
-                    init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
+                    new Ast.Expression.Access(Optional.of(new Ast.Expression.Access(Optional.empty(), "object")), "field"),
+                    new Ast.Expression.Literal(BigInteger.ONE)
                 ),
-                "object.field = 1;"
+                "obj.fld = 1;"
             ),
-            // variable = function();
+            // variableOne = funcOne();
             Arguments.of("Function",
                 new Ast.Statement.Assignment(
-                    init(new Ast.Expression.Access(Optional.empty(), "variable"),ast -> ast.setVariable(
-                            new Environment.Variable("variable", "variable", Environment.Type.COMPARABLE, false)
-                    )),
-                    init(new Ast.Expression.Function(Optional.empty(), "function", Arrays.asList()), ast -> ast.setFunction(
-                        new Environment.Function("function", "function", Arrays.asList(), Environment.Type.NIL)
-                    ))
+                    new Ast.Expression.Access(Optional.empty(), "variableOne"),
+                    new Ast.Expression.Function(Optional.empty(), "funcOne", List.of())
                 ),
-                "variable = function();"
+                "varONE = funcONE();"
             )
+            // variableOne = variableTwo;
         );
     }
 
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testIfStatement(String test, Ast.Statement.If ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+        analyzer.getScope().defineFunction("funcOne", "funcONE", List.of(), Environment.Type.INTEGER);
+        analyzer.getScope().defineFunction("funcOne", "funcONE", List.of(Environment.Type.INTEGER), Environment.Type.INTEGER);
+        analyzer.getScope().defineFunction("funcTwo", "funcTWO", List.of(), Environment.Type.INTEGER);
+        analyzer.getScope().defineVariable("condition", "cond", Environment.Type.BOOLEAN, false);
+        analyzer.getScope().defineVariable("conditionTwo", "condTWO", Environment.Type.BOOLEAN, false);
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testIfStatement() {
-        Environment.Variable _expr = new Environment.Variable("expr", "expr", Environment.Type.BOOLEAN, true);
-        Environment.Variable _stmt = new Environment.Variable("stmt", "stmt", Environment.Type.NIL, true);
-        Environment.Variable _stmt2 = new Environment.Variable("stmt2", "stmt2", Environment.Type.NIL, true);
-
-        Environment.Function _func = new Environment.Function("function", "function", Arrays.asList(Environment.Type.INTEGER), Environment.Type.INTEGER);
-
         return Stream.of(
-            // IF expr DO
-            //     stmt;
+            // IF condition DO
+            //     funcOne;
             // END
             Arguments.of("If",
                 new Ast.Statement.If(
-                    init(new Ast.Expression.Access(Optional.empty(), "expr"), ast -> ast.setVariable(_expr)),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(
-                            init(new Ast.Expression.Access(Optional.empty(), "stmt"), ast -> ast.setVariable(_stmt))
-                        )
+                    new Ast.Expression.Access(Optional.empty(), "condition"),
+                    List.of(
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of()))
                     ),
-                    Arrays.asList()
+                    List.of()
                 ),
                 String.join(System.lineSeparator(),
-                    "if (expr) {",
-                    "    stmt;",
+                    "if (cond) {",
+                    "    funcONE();",
                     "}"
                 )
             ),
-            // IF expr DO
-            //     stmt;
+            // IF condition DO
+            //     funcOne;
             // ELSE
-            //     stmt2;
+            //     funcTwo;
             // END
             Arguments.of("Else",
                 new Ast.Statement.If(
-                    init(new Ast.Expression.Access(Optional.empty(), "expr"), ast -> ast.setVariable(_expr)),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Access(Optional.empty(), "stmt"), ast -> ast.setVariable(_stmt)))
+                    new Ast.Expression.Access(Optional.empty(), "condition"),
+                    List.of(
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of()))
                     ),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Access(Optional.empty(), "stmt2"), ast -> ast.setVariable(_stmt2)))
+                    List.of(
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcTwo", List.of()))
                     )
                 ),
                 String.join(System.lineSeparator(),
-                    "if (expr) {",
-                    "    stmt;",
+                    "if (cond) {",
+                    "    funcONE();",
                     "} else {",
-                    "    stmt2;",
+                    "    funcTWO();",
                     "}"
                 )
             ),
             //If Multiple Statements:
-            //IF expr DO
-            //    function(1);
-            //    function(2);
-            //    function(3);
+            //IF condition DO
+            //    funcOne(1);
+            //    funcOne(2);
+            //    funcOne(3);
             //ELSE
-            //    function(4);
+            //    funcOne(4);
             //END
             Arguments.of("Multiple If",
                 new Ast.Statement.If(
-                    init(new Ast.Expression.Access(Optional.empty(), "expr"), ast -> ast.setVariable(_expr)),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_func))),
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.valueOf(2)), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_func))),
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.valueOf(3)), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_func)))
+                    new Ast.Expression.Access(Optional.empty(), "condition"),
+                    List.of(
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of(
+                            new Ast.Expression.Literal(BigInteger.valueOf(1))))),
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of(
+                            new Ast.Expression.Literal(BigInteger.valueOf(2))))),
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of(
+                            new Ast.Expression.Literal(BigInteger.valueOf(3)))))
                     ),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.valueOf(4)), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_func)))
+                    List.of(
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of(
+                            new Ast.Expression.Literal(BigInteger.valueOf(4)))))
                     )
                 ),
                 String.join(System.lineSeparator(),
-                    "if (expr) {",
-                    "    function(1);",
-                    "    function(2);",
-                    "    function(3);",
+                    "if (cond) {",
+                    "    funcONE(1);",
+                    "    funcONE(2);",
+                    "    funcONE(3);",
                     "} else {",
-                    "    function(4);",
+                    "    funcONE(4);",
                     "}"
                 )
             ),
             //Else Multiple Statements:
-            //IF expr DO
-            //    function(1);
+            //IF condition DO
+            //    funcOne(1);
             //ELSE
-            //    function(2);
-            //    function(3);
-            //    function(4);
+            //    funcOne(2);
+            //    funcOne(3);
+            //    funcOne(4);
             //END
             Arguments.of("Multiple Else",
                 new Ast.Statement.If(
-                    init(new Ast.Expression.Access(Optional.empty(), "expr"), ast -> ast.setVariable(_expr)),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_func)))
+                    new Ast.Expression.Access(Optional.empty(), "condition"),
+                    List.of(
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of(
+                            new Ast.Expression.Literal(BigInteger.valueOf(1)))))
                     ),
-                    Arrays.asList(
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.valueOf(2)), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_func))),
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.valueOf(3)), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_func))),
-                        new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                            Optional.empty(),
-                            "function",
-                            Arrays.asList(
-                                init(new Ast.Expression.Literal(BigInteger.valueOf(4)), ast -> ast.setType(Environment.Type.INTEGER))
-                            )
-                        ), ast -> ast.setFunction(_func)))
+                    List.of(
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of(
+                            new Ast.Expression.Literal(BigInteger.valueOf(2))))),
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of(
+                            new Ast.Expression.Literal(BigInteger.valueOf(3))))),
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of(
+                            new Ast.Expression.Literal(BigInteger.valueOf(4)))))
                     )
                 ),
                 String.join(System.lineSeparator(),
-                    "if (expr) {",
-                    "    function(1);",
+                    "if (cond) {",
+                    "    funcONE(1);",
                     "} else {",
-                    "    function(2);",
-                    "    function(3);",
-                    "    function(4);",
+                    "    funcONE(2);",
+                    "    funcONE(3);",
+                    "    funcONE(4);",
                     "}"
                 )
             ),
             //Nested If:
-            //IF cond1 DO
-            //    IF cond2 DO
-            //        function(1);
+            //IF condition DO
+            //    IF conditionTwo DO
+            //        funcOne(1);
             //    END
             //END
             Arguments.of("Nested If",
                 new Ast.Statement.If(
-                    init(new Ast.Expression.Access(Optional.empty(), "expr"), ast -> ast.setVariable(_expr)),
-                    Arrays.asList(
+                    new Ast.Expression.Access(Optional.empty(), "condition"),
+                    List.of(
                         new Ast.Statement.If(
-                            init(new Ast.Expression.Access(Optional.empty(), "expr"), ast -> ast.setVariable(_expr)),
-                            Arrays.asList(
-                                new Ast.Statement.Expression(init(new Ast.Expression.Function(
-                                    Optional.empty(),
-                                    "function",
-                                    Arrays.asList(
-                                        init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
-                                    )
-                                ), ast -> ast.setFunction(_func)))
+                            new Ast.Expression.Access(Optional.empty(), "conditionTwo"),
+                            List.of(
+                                new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcOne", List.of(
+                                    new Ast.Expression.Literal(BigInteger.valueOf(1)))))
                             ),
-                            Arrays.asList()
+                            List.of()
                         )
                     ),
-                    Arrays.asList()
+                    List.of()
                 ),
                 String.join(System.lineSeparator(),
-                    "if (expr) {",
-                    "    if (expr) {",
-                    "        function(1);",
+                    "if (cond) {",
+                    "    if (condTWO) {",
+                    "        funcONE(1);",
                     "    }",
                     "}"
                 )
@@ -1175,13 +812,16 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testForStatement(String test, Ast.Statement.For ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+        analyzer.getScope().defineFunction("funcOne", "funcONE", List.of(), Environment.Type.INTEGER);
+        analyzer.getScope().defineFunction("funcTwo", "funcTWO", List.of(), Environment.Type.INTEGER);
+        analyzer.getScope().defineVariable("num", "num", Environment.Type.INTEGER, false);
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testForStatement() {
-        Environment.Variable _num = new Environment.Variable("num", "num", Environment.Type.INTEGER, false);
-        Environment.Function _print = new Environment.Function("print", "System.out.println", Arrays.asList(Environment.Type.ANY), Environment.Type.NIL);
-
         return Stream.of(
             //For (7)
             //For (2):
@@ -1219,27 +859,28 @@ public class GeneratorTests {
             Arguments.of("For",
                 new Ast.Statement.For(
                     new Ast.Statement.Assignment(
-                        init(new Ast.Expression.Access(Optional.empty(), "num"),ast -> ast.setVariable(_num)),
-                        init(new Ast.Expression.Literal(BigInteger.valueOf(0)),ast -> ast.setType(Environment.Type.INTEGER))
+                        new Ast.Expression.Access(Optional.empty(), "num"),
+                        new Ast.Expression.Literal(BigInteger.valueOf(0))
                     ),
 
-                    init(new Ast.Expression.Binary("<",
-                        init(new Ast.Expression.Access(Optional.empty(), "num"),ast -> ast.setVariable(_num)),
-                        init(new Ast.Expression.Literal(BigInteger.valueOf(5)),ast -> ast.setType(Environment.Type.INTEGER))
-                    ),ast -> ast.setType(Environment.Type.BOOLEAN)),
+                    new Ast.Expression.Binary("<",
+                        new Ast.Expression.Access(Optional.empty(), "num"),
+                        new Ast.Expression.Literal(BigInteger.valueOf(5))
+                    ),
 
                     new Ast.Statement.Assignment(
-                        init(new Ast.Expression.Access(Optional.empty(), "num"),ast -> ast.setVariable(_num)),
-                        init(new Ast.Expression.Binary("+",
-                            init(new Ast.Expression.Access(Optional.empty(), "num"),ast -> ast.setVariable(_num)),
-                            init(new Ast.Expression.Literal(BigInteger.valueOf(1)),ast -> ast.setType(Environment.Type.INTEGER))
-                        ),ast -> ast.setType(Environment.Type.INTEGER))),
+                        new Ast.Expression.Access(Optional.empty(), "num"),
+                        new Ast.Expression.Binary("+",
+                            new Ast.Expression.Access(Optional.empty(), "num"),
+                            new Ast.Expression.Literal(BigInteger.valueOf(1))
+                        )
+                    ),
 
-                    Arrays.asList(
+                    List.of(
                         new Ast.Statement.Expression(
-                            init(new Ast.Expression.Function(Optional.empty(),"print", Arrays.asList(
-                                init(new Ast.Expression.Access(Optional.empty(), "num"),ast -> ast.setVariable(_num))
-                            )), ast -> ast.setFunction(_print))
+                            new Ast.Expression.Function(Optional.empty(),"print", List.of(
+                                new Ast.Expression.Access(Optional.empty(), "num")
+                            ))
                         )
                     )
                 ),
@@ -1251,30 +892,32 @@ public class GeneratorTests {
             ),
             // FOR (; num < 5;)
             //     print(num);
+            //     num = num + 1;
             // END
             Arguments.of("Missing Signature",
                 new Ast.Statement.For(
                     null,
 
-                    init(new Ast.Expression.Binary("<",
-                        init(new Ast.Expression.Access(Optional.empty(), "num"),ast -> ast.setVariable(_num)),
-                        init(new Ast.Expression.Literal(BigInteger.valueOf(5)),ast -> ast.setType(Environment.Type.INTEGER))
-                    ),ast -> ast.setType(Environment.Type.BOOLEAN)),
+                    new Ast.Expression.Binary("<",
+                        new Ast.Expression.Access(Optional.empty(), "num"),
+                        new Ast.Expression.Literal(BigInteger.valueOf(5))
+                    ),
 
                     null,
 
-                    Arrays.asList(
+                    List.of(
                         new Ast.Statement.Expression(
-                            init(new Ast.Expression.Function(Optional.empty(),"print", Arrays.asList(
-                                init(new Ast.Expression.Access(Optional.empty(), "num"),ast -> ast.setVariable(_num)))
-                            ),ast -> ast.setFunction(_print))),
+                            new Ast.Expression.Function(Optional.empty(),"print", List.of(
+                                new Ast.Expression.Access(Optional.empty(), "num")
+                            ))
+                        ),
 
                         new Ast.Statement.Assignment(
-                            init(new Ast.Expression.Access(Optional.empty(), "num"),ast -> ast.setVariable(_num)),
-                            init(new Ast.Expression.Binary("+",
-                                init(new Ast.Expression.Access(Optional.empty(), "num"),ast -> ast.setVariable(_num)),
-                                init(new Ast.Expression.Literal(BigInteger.valueOf(1)),ast -> ast.setType(Environment.Type.INTEGER))
-                            ),ast -> ast.setType(Environment.Type.INTEGER))
+                            new Ast.Expression.Access(Optional.empty(), "num"),
+                            new Ast.Expression.Binary("+",
+                                new Ast.Expression.Access(Optional.empty(), "num"),
+                                new Ast.Expression.Literal(BigInteger.valueOf(1))
+                            )
                         )
                     )
                 ),
@@ -1291,14 +934,16 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testWhileStatement(String test, Ast.Statement.While ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+        analyzer.getScope().defineFunction("funcOne", "funcONE", List.of(), Environment.Type.INTEGER);
+        analyzer.getScope().defineFunction("funcTwo", "funcTWO", List.of(), Environment.Type.INTEGER);
+        analyzer.getScope().defineVariable("condition", "cond", Environment.Type.BOOLEAN, false);
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testWhileStatement() {
-        Environment.Variable _condition = new Environment.Variable("condition", "condition", Environment.Type.BOOLEAN, false);
-        Environment.Variable _stmt1 = new Environment.Variable("stmt1", "stmt1", Environment.Type.NIL, true);
-        Environment.Variable _stmt2 = new Environment.Variable("stmt2", "stmt2", Environment.Type.NIL, true);
-
         return Stream.of(
             //While (7)
             //One Statement (2):
@@ -1324,39 +969,33 @@ public class GeneratorTests {
             //END
 
             // WHILE condition DO
-            // END
-            Arguments.of("While",
-                new Ast.Statement.While(
-                    init(new Ast.Expression.Access(Optional.empty(), "condition"), ast -> ast.setVariable(_condition)),
-                    Arrays.asList()
-                ),
-                String.join(System.lineSeparator(),
-                    "while (condition) {}"
-                )
-            ),
-            // WHILE condition DO
             //   stmt1;
             //   stmt2;
             // END
             Arguments.of("While",
                 new Ast.Statement.While(
-                    init(new Ast.Expression.Access(Optional.empty(), "condition"), ast -> ast.setVariable(_condition)),
-
-                    Arrays.asList(
-                        new Ast.Statement.Expression(
-                            init(new Ast.Expression.Access(Optional.empty(), "stmt1"),ast -> ast.setVariable(_stmt1))
-                        ),
-
-                        new Ast.Statement.Expression(
-                            init(new Ast.Expression.Access(Optional.empty(), "stmt2"),ast -> ast.setVariable(_stmt2))
-                        )
+                    new Ast.Expression.Access(Optional.empty(), "condition"),
+                    List.of(
+                        new Ast.Statement.Expression( new Ast.Expression.Function(Optional.empty(), "funcOne", List.of())),
+                        new Ast.Statement.Expression(new Ast.Expression.Function(Optional.empty(), "funcTwo", List.of()))
                     )
                 ),
                 String.join(System.lineSeparator(),
-                    "while (condition) {",
-                    "    stmt1;",
-                    "    stmt2;",
+                    "while (cond) {",
+                    "    funcONE();",
+                    "    funcTWO();",
                     "}"
+                )
+            ),
+            // WHILE condition DO
+            // END
+            Arguments.of("While Empty Statements",
+                new Ast.Statement.While(
+                    new Ast.Expression.Access(Optional.empty(), "condition"),
+                    List.of()
+                ),
+                String.join(System.lineSeparator(),
+                    "while (cond) {}"
                 )
             )
         );
@@ -1365,7 +1004,11 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testReturnExpression(String test, Ast.Statement.Return ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+        analyzer.setReturnType(Environment.Type.INTEGER);
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testReturnExpression() {
@@ -1373,10 +1016,9 @@ public class GeneratorTests {
             // RETURN 5 * 10;
             Arguments.of("Return",
                 new Ast.Statement.Return(
-                    init(new Ast.Expression.Binary("*",
-                        init(new Ast.Expression.Literal(BigInteger.valueOf(5)), ast -> ast.setType(Environment.Type.INTEGER)),
-                        init(new Ast.Expression.Literal(BigInteger.TEN), ast -> ast.setType(Environment.Type.INTEGER))
-                    ), ast -> ast.setType(Environment.Type.INTEGER))
+                    new Ast.Expression.Binary("*",
+                        new Ast.Expression.Literal(BigInteger.valueOf(5)),
+                        new Ast.Expression.Literal(BigInteger.TEN))
                 ),
                 "return 5 * 10;"
             )
@@ -1386,39 +1028,42 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testLiteralExpression(String test, Ast.Expression.Literal ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testLiteralExpression() {
         return Stream.of(
             // TRUE
             Arguments.of("Boolean",
-                init(new Ast.Expression.Literal(true), ast -> ast.setType(Environment.Type.BOOLEAN)),
+                new Ast.Expression.Literal(true),
                 "true"
             ),
             // 1
             Arguments.of("Integer",
-                init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER)),
+                new Ast.Expression.Literal(BigInteger.ONE),
                 "1"
             ),
             // 123.456
             Arguments.of("Double",
-                init(new Ast.Expression.Literal(BigDecimal.valueOf(123.456)), ast -> ast.setType(Environment.Type.DECIMAL)),
+                new Ast.Expression.Literal(BigDecimal.valueOf(123.456)),
                 "123.456"
             ),
             // "Hello World"
             Arguments.of("String",
-                init(new Ast.Expression.Literal("Hello World"), ast -> ast.setType(Environment.Type.STRING)),
+                new Ast.Expression.Literal("Hello World"),
                 "\"Hello World\""
             ),
             // 'a'
             Arguments.of("Character",
-                init(new Ast.Expression.Literal('a'), ast -> ast.setType(Environment.Type.CHARACTER)),
-                "\'a\'"
+                new Ast.Expression.Literal('a'),
+                "'a'"
             ),
             // "NIL"
             Arguments.of("Nil",
-                init(new Ast.Expression.Literal(null), ast -> ast.setType(Environment.Type.NIL)),
+                new Ast.Expression.Literal(null),
                 "null"
             )
         );
@@ -1427,7 +1072,10 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testGroupExpression(String test, Ast.Expression.Group ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testGroupExpression() {
@@ -1438,19 +1086,18 @@ public class GeneratorTests {
 
             // (1)
             Arguments.of("Group Literal",
-                init(new Ast.Expression.Group(
-                    init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER))
-                    ), ast -> ast.setType(Environment.Type.INTEGER)),
+                new Ast.Expression.Group(
+                    new Ast.Expression.Literal(BigInteger.ONE)
+                ),
                 "(1)"
             ),
             // (1 + 10)
             Arguments.of("Group Binary",
-                init(new Ast.Expression.Group(
-                    init(new Ast.Expression.Binary("+",
-                        init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER)),
-                        init(new Ast.Expression.Literal(BigInteger.TEN), ast -> ast.setType(Environment.Type.INTEGER))
-                    ), ast -> ast.setType(Environment.Type.INTEGER))
-                ), ast -> ast.setType(Environment.Type.INTEGER)),
+                new Ast.Expression.Group(
+                    new Ast.Expression.Binary("+",
+                        new Ast.Expression.Literal(BigInteger.ONE),
+                        new Ast.Expression.Literal(BigInteger.TEN))
+                ),
                 "(1 + 10)"
             )
         );
@@ -1459,7 +1106,10 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testBinaryExpression(String test, Ast.Expression.Binary ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testBinaryExpression() {
@@ -1482,34 +1132,30 @@ public class GeneratorTests {
 
             // TRUE AND FALSE
             Arguments.of("And",
-                init(new Ast.Expression.Binary("AND",
-                    init(new Ast.Expression.Literal(true), ast -> ast.setType(Environment.Type.BOOLEAN)),
-                    init(new Ast.Expression.Literal(false), ast -> ast.setType(Environment.Type.BOOLEAN))
-                ), ast -> ast.setType(Environment.Type.BOOLEAN)),
+                new Ast.Expression.Binary("AND",
+                    new Ast.Expression.Literal(true),
+                    new Ast.Expression.Literal(false)),
                 "true && false"
             ),
             // 1 > 10
             Arguments.of("Comparison",
-                init(new Ast.Expression.Binary(">",
-                    init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER)),
-                    init(new Ast.Expression.Literal(BigInteger.TEN), ast -> ast.setType(Environment.Type.INTEGER))
-                ), ast -> ast.setType(Environment.Type.BOOLEAN)),
+                new Ast.Expression.Binary(">",
+                    new Ast.Expression.Literal(BigInteger.ONE),
+                    new Ast.Expression.Literal(BigInteger.TEN)),
                 "1 > 10"
             ),
             // 1 + 10
             Arguments.of("Addition",
-                init(new Ast.Expression.Binary("+",
-                    init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER)),
-                    init(new Ast.Expression.Literal(BigInteger.TEN), ast -> ast.setType(Environment.Type.INTEGER))
-                ), ast -> ast.setType(Environment.Type.INTEGER)),
+                new Ast.Expression.Binary("+",
+                    new Ast.Expression.Literal(BigInteger.ONE),
+                    new Ast.Expression.Literal(BigInteger.TEN)),
                 "1 + 10"
             ),
             // "Ben" + 10
             Arguments.of("Concatenation",
-                init(new Ast.Expression.Binary("+",
-                    init(new Ast.Expression.Literal("Ben"), ast -> ast.setType(Environment.Type.STRING)),
-                    init(new Ast.Expression.Literal(BigInteger.TEN), ast -> ast.setType(Environment.Type.INTEGER))
-                ), ast -> ast.setType(Environment.Type.STRING)),
+                new Ast.Expression.Binary("+",
+                    new Ast.Expression.Literal("Ben"),
+                    new Ast.Expression.Literal(BigInteger.TEN)),
                 "\"Ben\" + 10"
             )
         );
@@ -1518,14 +1164,16 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testAccessExpression(String test, Ast.Expression.Access ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+        analyzer.getScope().defineVariable("variable", "var", Environment.Type.INTEGER, false);
+        analyzer.getScope().defineVariable("object", "obj", OBJECT_TYPE, false);
+        analyzer.getScope().defineVariable("field", "fld", Environment.Type.INTEGER, false);
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testAccessExpression() {
-        Environment.Variable _variable = new Environment.Variable("variable", "variable", Environment.Type.INTEGER, false);
-        Environment.Variable _object = new Environment.Variable("object", "object", OBJECT_TYPE, false);
-        Environment.Variable _field = new Environment.Variable("field", "field", Environment.Type.INTEGER, false);
-
         return Stream.of(
             //Access (6)
 
@@ -1540,17 +1188,15 @@ public class GeneratorTests {
 
             // variable
             Arguments.of("Variable",
-                init(new Ast.Expression.Access(Optional.empty(), "variable"), ast -> ast.setVariable(_variable)),
-                "variable"
+                new Ast.Expression.Access(Optional.empty(), "variable"),
+                "var"
             ),
             // object.field
             Arguments.of("Field",
-                init(
-                    new Ast.Expression.Access(Optional.of(
-                        init(new Ast.Expression.Access(Optional.empty(), "object"), ast -> ast.setVariable(_object))
-                    ), "field"), ast -> ast.setVariable(_field)
-                ),
-                "object.field"
+                new Ast.Expression.Access(Optional.of(
+                    new Ast.Expression.Access(Optional.empty(), "object")
+                ), "field"),
+                "obj.fld"
             )
         );
     }
@@ -1558,14 +1204,14 @@ public class GeneratorTests {
     @ParameterizedTest(name = "{0}")
     @MethodSource
     void testFunctionExpression(String test, Ast.Expression.Function ast, String expected) {
-        test(ast, expected);
+        Analyzer analyzer = new Analyzer();
+        analyzer.getScope().defineFunction("function", "func", List.of(), Environment.Type.INTEGER);
+
+        Bindings bindings = analyzer.decorate(ast);
+        test(ast, bindings, expected);
     }
 
     private static Stream<Arguments> testFunctionExpression() {
-        Environment.Function _print = new Environment.Function("print", "System.out.println", Arrays.asList(Environment.Type.ANY), Environment.Type.NIL);
-        Environment.Function _func = new Environment.Function("func", "func", Arrays.asList(), Environment.Type.INTEGER);
-        Environment.Function _slice = new Environment.Function("slice", "substring", Arrays.asList(Environment.Type.ANY, Environment.Type.INTEGER, Environment.Type.INTEGER), Environment.Type.STRING);
-
         return Stream.of(
             //Function (6)
             //Zero Arguments: function()
@@ -1573,32 +1219,30 @@ public class GeneratorTests {
             //Multiple Arguments: function(1, 2, 3)
             //Method: object.method(1, 2, 3)
             //Function JVM Name: name()
-            //String Slice: "string".slice(1, 5)
 
             // func()
             Arguments.of("Zero Arguments",
-                init(new Ast.Expression.Function(Optional.empty(),"func", Arrays.asList()), ast -> ast.setFunction(_func)),
+                new Ast.Expression.Function(Optional.empty(),"function", List.of()),
                 "func()"
             ),
             // print("Hello, World!")
             Arguments.of("Print",
-                init(new Ast.Expression.Function(Optional.empty(),"print", Arrays.asList(
-                    init(new Ast.Expression.Literal("Hello, World!"), ast -> ast.setType(Environment.Type.STRING)))
-                ),ast -> ast.setFunction(_print)),
+                new Ast.Expression.Function(Optional.empty(),"print", List.of(
+                    new Ast.Expression.Literal("Hello, World!"))),
                 "System.out.println(\"Hello, World!\")"
             ),
             // "string".slice(1, 10)
             Arguments.of("String Slice",
-                init(new Ast.Expression.Function(
+                new Ast.Expression.Function(
                     Optional.of(
-                        init(new Ast.Expression.Literal("string"), ast -> ast.setType(Environment.Type.STRING))
+                        new Ast.Expression.Literal("string")
                     ),
                     "slice",
-                    Arrays.asList(
-                        init(new Ast.Expression.Literal(BigInteger.ONE), ast -> ast.setType(Environment.Type.INTEGER)),
-                        init(new Ast.Expression.Literal(BigInteger.TEN), ast -> ast.setType(Environment.Type.INTEGER))
+                    List.of(
+                        new Ast.Expression.Literal(BigInteger.ONE),
+                        new Ast.Expression.Literal(BigInteger.TEN)
                     )
-                ), ast -> ast.setFunction(_slice)),
+                ),
                 "\"string\".substring(1, 10)"
             )
         );
@@ -1607,18 +1251,8 @@ public class GeneratorTests {
     /**
      * Helper function for tests, using a StringWriter as the output stream.
      */
-    private static void test(Ast ast, String expected) {
-        StringWriter writer = new StringWriter();
-        new Generator(new PrintWriter(writer)).visit(ast);
-        Assertions.assertEquals(expected, writer.toString());
+    private static void test(Ast ast, Bindings bindings, String expected) {
+        String result = new Generator(bindings).emit(ast);
+        Assertions.assertEquals(expected, result);
     }
-
-    /**
-     * Runs a callback on the given value, used for inline initialization.
-     */
-    private static <T> T init(T value, Consumer<T> initializer) {
-        initializer.accept(value);
-        return value;
-    }
-
 }
